--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3.8'
 
 services:
-  db:
+  mysql:
     image: mysql:8.0
-    container_name: mysql_container
     environment:
       MYSQL_ROOT_PASSWORD: password
     ports:
@@ -22,6 +21,23 @@ services:
       retries: 5
     restart: always
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmq-diagnostics -q status || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: always
+
   # api_server:
   #   build: .
   #   container_name: api_server
@@ -29,7 +45,7 @@ services:
   #     - db
   #   environment:
   #     RAILS_ENV: development
-  #     DATABASE_HOST: db
+  #     DATABASE_HOST: mysql
   #     DATABASE_USER: root
   #     DATABASE_PASSWORD: password
   #   volumes:
@@ -40,3 +56,4 @@ services:
 
 volumes:
   mysql_data:
+  rabbitmq-data:
