feat: sidekiq cron job, sync data from platform

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ WORKER_AGENT_NAME=megaphone
 
 MEGAPHONE_ORGANIZATION_ID=organization-id
 MEGAPHONE_TOKEN=token
+
+REDIS_URL=redis://localhost:6379/0
