--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,17 @@ services:
       retries: 5
     restart: always
 
+  redis:
+    image: redis:7.4-alpine
+    ports:
+      - 6379:6379
+    healthcheck:
+      test: "redis-cli ping || exit 1"
+      interval: 1s
+      timeout: 3s
+      retries: 5
+    restart: on-failure
+
   # api_server:
   #   build: .
   #   container_name: api_server
