feat: set up application using docker-compose

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-WORKER_AGENT_NAME=megaphone
+RAILS_ENV=development
 
 MEGAPHONE_ORGANIZATION_ID=organization-id
 MEGAPHONE_TOKEN=token
+
+DATABASE_HOST=127.0.0.1
+DATABASE_USER=root
+DATABASE_PASSWORD=password
 
 REDIS_URL=redis://localhost:6379/0
