--- a/config/database.yml
+++ b/config/database.yml
@@ -8,9 +8,9 @@ default: &default
   adapter: mysql2
   encoding: utf8
   database: oms
-  username: root
-  password: password
-  host: 127.0.0.1
+  username: <%= ENV.fetch("DATABASE_USER", "root") %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD", "password") %>
+  host: <%= ENV.fetch("DATABASE_HOST", "127.0.0.1") %>
   port: 3306
 
 development:
