--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mysql:
     image: mysql:8.0
@@ -32,21 +30,43 @@ services:
       retries: 5
     restart: on-failure
 
-  # api_server:
-  #   build: .
-  #   container_name: api_server
-  #   depends_on:
-  #     - db
-  #   environment:
-  #     RAILS_ENV: development
-  #     DATABASE_HOST: mysql
-  #     DATABASE_USER: root
-  #     DATABASE_PASSWORD: password
-  #   volumes:
-  #     - .:/app
-  #   ports:
-  #     - "3000:3000"
-  #   command: "bundle exec rails s -b 0.0.0.0"
+  app:
+    build: .
+    depends_on:
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    env_file: .env
+    environment:
+      DATABASE_HOST: mysql
+      DATABASE_USER: root
+      DATABASE_PASSWORD: password
+      REDIS_URL: redis://redis:6379/0
+    volumes:
+      - .:/app
+    ports:
+      - "3000:3000"
+    command: "bundle exec rails s -b 0.0.0.0"
+    profiles: ["app"]
+
+  sidekiq:
+    build: .
+    depends_on:
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    env_file: .env
+    environment:
+      DATABASE_HOST: mysql
+      DATABASE_USER: root
+      DATABASE_PASSWORD: password
+      REDIS_URL: redis://redis:6379/0
+    volumes:
+      - .:/app
+    command: bundle exec sidekiq
+    profiles: ["app"]
 
 volumes:
   mysql_data:
