feat: add advertiser table, job, api sdk

--- a/config/sidekiq_schedule.yml
+++ b/config/sidekiq_schedule.yml
@@ -1,3 +1,7 @@
 campaign_sync:
-  cron: "*/10 * * * * *"  # Runs every 10 seconds
+  cron: "*/20 * * * * *"  # Runs every 10 seconds
   class: "CampaignSyncWorker"
+
+advertiser_sync:
+  cron: "* 1 * * * *"
+  class: "AdvertiserSyncWorker"
