--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,12 +78,16 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
+      - name: Load environment variables
+        run: cp .env.example .env
+      
+      - name: Prepare test database
+        run: bin/rails db:test:prepare
+        
       - name: Run tests
         env:
           RAILS_ENV: test
-        run: |
-          bin/rails db:test:prepare
-          bundle exec rspec
+        run: bundle exec rspec
 
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
