doc: add copy env section

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@ RAILS_ENV=development
 MEGAPHONE_ORGANIZATION_ID=organization-id
 MEGAPHONE_TOKEN=token
 
-DATABASE_HOST=127.0.0.1
+DATABASE_HOST=mysql
 DATABASE_USER=root
 DATABASE_PASSWORD=password
 
-REDIS_URL=redis://localhost:6379/0
+REDIS_URL=redis://redis:6379/0
 
 CUSTOMER_ID=123
